[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=1]
[ext_resource path="res://World/CorruptedHeart.gd" type="Script" id=2]
[ext_resource path="res://Music and Sounds/HeartPickup.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.85467

[sub_resource type="Animation" id=2]
resource_name = "BlinkAnimation"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="CorruptedHeart" type="Area2D"]
collision_layer = 0
collision_mask = 64
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="HeartPickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Startblink" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BlinkAnimation = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_SmallHeart_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_SmallHeart_body_entered"]
[connection signal="finished" from="HeartPickupSound" to="." method="_on_HeartPickupSound_finished"]
[connection signal="timeout" from="Startblink" to="." method="_on_Startblink_timeout"]
